fixed navigation problem on iphone 4 size screens portrait

--- a/css/home.css
+++ b/css/home.css
@@ -948,14 +948,10 @@ textarea{
 	.border-top div div{
 		text-align: right;
 		padding-right: 2px;
-		margin-top: -17px;
-	}
-
-	.border-top a{
-		display: block;
-		margin-top: 4px;
 		font-size: 10px;
 	}
+
+
 }
 
 
